--- a/date/2025-01/page-2.htm
+++ b/date/2025-01/page-2.htm
@@ -274,16 +274,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-12-25-free-high-speed-nodes.htm" title="12月25日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">12月25日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-46814.htm" title="动物医院诊疗许可证需要提供什么资料和手续 动物医院诊疗许可证需要提供什么资料和手续呢">动物医院诊疗许可证需要提供什么资料和手续 动物医院诊疗许可证需要提供什么资料和手续呢</a></li>
+                        <li class="py-2"><a href="/news/article-41846.htm" title="python开发HDFS">python开发HDFS</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-13-node-share-links.htm" title="1月13日→18.9M/S|2025年最新免费节点Sockscap64订阅链接地址">1月13日→18.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-49305.htm" title="vue项目中安装sass方法">vue项目中安装sass方法</a></li>
+                        <li class="py-2"><a href="/news/article-30725.htm" title="动物医院诊疗范围包括哪些（动物医院诊疗范围包括哪些项目）">动物医院诊疗范围包括哪些（动物医院诊疗范围包括哪些项目）</a></li>
+                        <li class="py-2"><a href="/news/article-33576.htm" title="宠物粮在哪个网站买便宜又好呢（宠物粮在哪里批发）">宠物粮在哪个网站买便宜又好呢（宠物粮在哪里批发）</a></li>
+                        <li class="py-2"><a href="/news/article-44833.htm" title="win11系统如何添加pdf虚拟打印机">win11系统如何添加pdf虚拟打印机</a></li>
+                        <li class="py-2"><a href="/news/article-55709.htm" title="动物医院办理条件有哪些规定（动物医院开设条件）">动物医院办理条件有哪些规定（动物医院开设条件）</a></li>
                         <li class="py-2"><a href="/news/article-40367.htm" title="宠物口粮上市公司（宠物口粮上市公司有几家）">宠物口粮上市公司（宠物口粮上市公司有几家）</a></li>
-                        <li class="py-2"><a href="/news/article-46314.htm" title="动物疫苗保存条件是什么样的（动物疫苗在常温下能放多久）">动物疫苗保存条件是什么样的（动物疫苗在常温下能放多久）</a></li>
-                        <li class="py-2"><a href="/news/article-33096.htm" title="centos7-linux安装docker(离线方式)">centos7-linux安装docker(离线方式)</a></li>
-                        <li class="py-2"><a href="/news/article-54048.htm" title="动物医院主要工作（动物医院主要工作有哪些）">动物医院主要工作（动物医院主要工作有哪些）</a></li>
-                        <li class="py-2"><a href="/news/article-44342.htm" title="时间与日期——瞬时（Instant）">时间与日期——瞬时（Instant）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-6-node-share.htm" title="1月6日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址">1月6日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-40366.htm" title="动物打疫苗肉还能吃吗有毒吗（动物打疫苗后多久能杀了吃）">动物打疫苗肉还能吃吗有毒吗（动物打疫苗后多久能杀了吃）</a></li>
-                        <li class="py-2"><a href="/news/article-43358.htm" title="被家猫轻微抓伤有一点渗血有事吗（被家猫抓伤轻微出血需要打破伤风吗）">被家猫轻微抓伤有一点渗血有事吗（被家猫抓伤轻微出血需要打破伤风吗）</a></li>
+                        <li class="py-2"><a href="/news/article-59100.htm" title="Java类的加载、链接、初始化">Java类的加载、链接、初始化</a></li>
+                        <li class="py-2"><a href="/news/article-54596.htm" title="湖北宠物店城管打人（宠物店举报电话多少）">湖北宠物店城管打人（宠物店举报电话多少）</a></li>
                     </ul>
     </div>
 </div>
@@ -295,7 +295,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">54</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
+                <h4><span class="badge" style="float: right;">63</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
