--- a/free-nodes/2025-2-18-free-node-subscribe.htm
+++ b/free-nodes/2025-2-18-free-node-subscribe.htm
@@ -150,6 +150,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 <p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://sockscap64.github.io/uploads/2025/02/1-20250218.yaml</p><p>https://sockscap64.github.io/uploads/2025/02/4-20250218.yaml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://sockscap64.github.io/uploads/2025/02/2-20250218.txt</p><p>https://sockscap64.github.io/uploads/2025/02/4-20250218.txt</p><p><strong>sing-box订阅链接</strong></p><p>https://sockscap64.github.io/uploads/2025/02/20250218.json</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://muguacloud.top/#/register?code=" data-type="Mugua" data-code="MQag6brk" rel="nofollow noopener" style="color:#c00;">木瓜云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>                <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2025-2-17-node-share-links.htm">2月17日→21.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></p>
+                                        <p>下一个：<a href="/free-nodes/2025-2-19-node-share.htm">2月19日→21.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -178,16 +179,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-34518.htm" title="附近宠物收容中心（附近宠物收容中心电话）">附近宠物收容中心（附近宠物收容中心电话）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-29-free-node-subscribe.htm" title="1月29日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址">1月29日→18.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-38395.htm" title="OpenSSL3.0.5安装">OpenSSL3.0.5安装</a></li>
-                        <li class="py-2"><a href="/news/article-51909.htm" title="开宠物店亏本经历有哪些（开宠物店会亏本吗）">开宠物店亏本经历有哪些（开宠物店会亏本吗）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-17-free-high-speed-nodes.htm" title="1月17日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址">1月17日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-5-free-node-subscribe-links.htm" title="1月5日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">1月5日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-31678.htm" title="linux搭建NFS网络文件共享服务">linux搭建NFS网络文件共享服务</a></li>
-                        <li class="py-2"><a href="/news/article-42353.htm" title="简单宠物寄养协议（宠物店宠物寄养协议）">简单宠物寄养协议（宠物店宠物寄养协议）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-19-free-high-speed-nodes.htm" title="1月19日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">1月19日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-2-13-node-share-links.htm" title="2月13日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">2月13日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-39379.htm" title="深圳益沣成资产管理有限公司（深圳市益成实业有限公司）">深圳益沣成资产管理有限公司（深圳市益成实业有限公司）</a></li>
+                        <li class="py-2"><a href="/news/article-44834.htm" title="动物疫苗生产资质要求（动物疫苗生产资质要求是什么）">动物疫苗生产资质要求（动物疫苗生产资质要求是什么）</a></li>
+                        <li class="py-2"><a href="/news/article-45329.htm" title="宠物粮食排名榜最新（宠物粮食排名榜最新）">宠物粮食排名榜最新（宠物粮食排名榜最新）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-10-free-subscribe-node.htm" title="1月10日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">1月10日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-33096.htm" title="centos7-linux安装docker(离线方式)">centos7-linux安装docker(离线方式)</a></li>
+                        <li class="py-2"><a href="/news/article-56251.htm" title="动物疫苗企业20强（动物疫苗龙头股排名）">动物疫苗企业20强（动物疫苗龙头股排名）</a></li>
+                        <li class="py-2"><a href="/news/article-37413.htm" title="厦门宠物领养贴吧群（厦门宠物领养厦门宠物赠送）">厦门宠物领养贴吧群（厦门宠物领养厦门宠物赠送）</a></li>
+                        <li class="py-2"><a href="/news/article-55148.htm" title="宠物领养协议法律效力如何 宠物领养协议法律效力如何">宠物领养协议法律效力如何 宠物领养协议法律效力如何</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-20-free-high-speed-nodes.htm" title="2月20日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址">2月20日→18.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-2-8-free-subscribe-node.htm" title="2月8日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">2月8日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -199,7 +200,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">54</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
+                <h4><span class="badge" style="float: right;">60</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
